--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/FinalProjectBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/FinalProjectBuild.data.gz",
-        frameworkUrl: buildUrl + "/FinalProjectBuild.framework.js.gz",
-        codeUrl: buildUrl + "/FinalProjectBuild.wasm.gz",
+        dataUrl: buildUrl + "/FinalProjectBuild.data",
+        frameworkUrl: buildUrl + "/FinalProjectBuild.framework.js",
+        codeUrl: buildUrl + "/FinalProjectBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Final Project",
